--- a/SignalsAndRxJs/package.json
+++ b/SignalsAndRxJs/package.json
@@ -24,10 +24,12 @@
   "private": true,
   "packageManager": "yarn@1.22.22",
   "dependencies": {
+    "@angular/cdk": "^21.0.5",
     "@angular/common": "^21.0.0",
     "@angular/compiler": "^21.0.0",
     "@angular/core": "^21.0.0",
     "@angular/forms": "^21.0.0",
+    "@angular/material": "^21.0.5",
     "@angular/platform-browser": "^21.0.0",
     "@angular/router": "^21.0.0",
     "json-server": "^1.0.0-beta.3",
